[gd_scene load_steps=4 format=3 uid="uid://ck5r3o4fypx2n"]

[ext_resource type="Material" uid="uid://sx4trf4408mv" path="res://Resources/UI/PauseMenu/bg_material.tres" id="1_b2vau"]
[ext_resource type="Script" path="res://Scripts/Game/pause_menu.gd" id="1_v670g"]
[ext_resource type="Theme" uid="uid://dxgmy2frydty" path="res://Resources/UI/Button/button_theme.tres" id="2_30780"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v670g")

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource("1_b2vau")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.690196)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.5
offset_top = -55.0
offset_right = 78.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_30780")
text = "Continue"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_30780")
text = "Restart"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_30780")
text = "Quit"

[connection signal="gui_input" from="VBoxContainer/ContinueButton" to="." method="on_continue_input_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="on_continue_pressed"]
[connection signal="gui_input" from="VBoxContainer/RestartButton" to="." method="on_restart_input_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="on_restart_pressed"]
[connection signal="gui_input" from="VBoxContainer/QuitButton" to="." method="on_quit_input_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="on_quit_pressed"]
